bugfix(ARC-1457): fix z-index radiobuttons

--- a/src/modules/visitor-space/components/SelectDateOrYear/SelectDateOrYear.module.scss
+++ b/src/modules/visitor-space/components/SelectDateOrYear/SelectDateOrYear.module.scss
@@ -7,5 +7,6 @@ $component: "radiobuttons-container";
 
 	&__radiobutton {
 		margin: 1rem 0;
+		z-index: 0;
 	}
 }
